@@ -2,4 +2,5 @@ Julien Dutheil <jdutheil@daimi.edu.dk>
 Vincent Ranwez <ranwez@isem.univ-montp2.fr>
 Nicolas Galtier <galtier@univ-montp2.fr>
 Bastien Boussau <bboussau@biomserv.univ-lyon1.fr>
+Céline Scornavacca <celine.scornavacca@lirmm.fr>
 
